# autoware-0.41.2

./: .gitignore  DIAGNOSTICS_SIGNAL_CHAIN_WORD_SOURCE.md  DIAGNOSTICS_SIGNAL_CHAIN_ZH.md  YABLOC_GUIDE_ZH.md  a.pcd  location_diagnostics梳理.docx  ndt_system_investigation.md  ndt风冷水冷性能差异排查.md
src/dfcv_mining_msgs/: CMakeLists.txt  package.xml
src/dfcv_mining_msgs/msg/: BCanMsg.msg  BodyControlADCU.msg  CCanMsg.msg  DiagnosisInfo.msg  GlobalRpt.msg  LatCtrlEX.msg  LgtCtrlEX.msg  LocationIMU.msg  PCanMsg.msg  SweepingEX.msg  SystemADModeEx.msg  SystemDataUploadEx.msg  SystemRptFloat.msg  SystemRptInt.msg  SystemTBoxReplyEx.msg  TboxCanFdMsg.msg
src/infinite_loop_cpp/: CMakeLists.txt  package.xml
src/infinite_loop_cpp/config/: infinite_loop.yaml
src/infinite_loop_cpp/launch/: combined.launch.xml  infinite_loop.launch.xml  map.launch.xml
src/infinite_loop_cpp/src/: infinite_loop_node.cpp  infinite_loop_node（复件）.cpp  map_parser_node.cpp
src/my_gnss_converter/: CMakeLists.txt  package.xml
src/my_gnss_converter/src/: gnss_converter_node.cpp  localization_compare_node.cpp  pointcloud_converter.cpp
src/universe/autoware.universe/sensing/autoware_gnss_poser/: CMakeLists.txt
src/universe/autoware.universe/sensing/autoware_gnss_poser/launch/: gnss_poser.launch.xml
src/universe/autoware.universe/sensing/autoware_gnss_poser/src/: gnss_poser_node.cpp
src/universe/autoware.universe/sensing/cuda_pointcloud/autoware_agnocast_wrapper_v49/: CMakeLists.txt  package.xml
src/universe/autoware.universe/sensing/cuda_pointcloud/autoware_cmake_v49/: CHANGELOG.rst  CMakeLists.txt  README.md  autoware_cmake-extras.cmake  package.xml
src/universe/autoware.universe/sensing/cuda_pointcloud/autoware_cmake_v49/cmake/: autoware_ament_auto_package.cmake  autoware_package.cmake
src/universe/autoware.universe/sensing/cuda_pointcloud/autoware_cuda_pointcloud_preprocessor_v49/: CMakeLists.txt  README.md  package.xml
src/universe/autoware.universe/sensing/cuda_pointcloud/autoware_cuda_pointcloud_preprocessor_v49/config/: crop_box_filter_node.param.yaml  crop_box_keep_inside_40m.param.yaml  crop_box_remove_ego_vehicle.param.yaml  cuda_pointcloud_preprocessor_crop_only.param.yaml  cuda_voxel_grid_downsample_filter.param.yaml  voxel_grid_downsample_filter_node.param.yaml
src/universe/autoware.universe/sensing/cuda_pointcloud/autoware_cuda_pointcloud_preprocessor_v49/docs/: cuda-concatenate-data.md  cuda-pointcloud-preprocessor.md  cuda-polar-voxel-outlier-filter.md  cuda-random-downsample-filter.md  cuda-voxel-grid-downsample.md
src/universe/autoware.universe/sensing/cuda_pointcloud/autoware_cuda_pointcloud_preprocessor_v49/launch/: cuda_concatenate_and_time_sync_node.launch.xml  cuda_localization.launch.py  cuda_pointcloud_preprocessor.launch.xml  cuda_pointcloud_preprocessor_crop_only.launch.xml  cuda_polar_voxel_outlier_filter.launch.xml  cuda_random_downsample_filter.launch.xml  cuda_voxel_grid_downsample_filter.launch.xml
src/universe/autoware.universe/sensing/cuda_pointcloud/autoware_cuda_pointcloud_preprocessor_v49/schema/: cuda_pointcloud_preprocessor.schema.json  cuda_random_downsample_filter.schema.json
src/universe/autoware.universe/sensing/cuda_pointcloud/autoware_internal_metric_msgs_v49/: CMakeLists.txt  package.xml
src/universe/autoware.universe/sensing/cuda_pointcloud/autoware_lint_common_v49/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/universe/autoware.universe/sensing/cuda_pointcloud/autoware_pcl_extensions_v49/: CMakeLists.txt  package.xml
src/universe/autoware.universe/sensing/cuda_pointcloud/autoware_planning_msgs_v49/: CMakeLists.txt  package.xml
src/universe/autoware.universe/sensing/cuda_pointcloud/autoware_planning_msgs_v49/msg/: LaneletRoute.msg  LaneletSegment.msg  Path.msg  Trajectory.msg
src/universe/autoware.universe/sensing/cuda_pointcloud/autoware_planning_msgs_v49/srv/: ClearRoute.srv  SetLaneletRoute.srv  SetPreferredPrimitive.srv  SetWaypointRoute.srv
src/universe/autoware.universe/sensing/cuda_pointcloud/autoware_point_types_v49/: CMakeLists.txt  package.xml
src/universe/autoware.universe/sensing/cuda_pointcloud/autoware_pointcloud_preprocessor_v49/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/universe/autoware.universe/sensing/cuda_pointcloud/autoware_pointcloud_preprocessor_v49/docs/: blockage-diag.md  concatenate-data.md  crop-box-filter.md  downsample-filter.md  dual-return-outlier-filter.md  polar-voxel-outlier-filter.md  radius-search-2d-outlier-filter.md  ring-outlier-filter.md  vector-map-inside-area-filter.md  voxel-grid-outlier-filter.md
src/universe/autoware.universe/sensing/cuda_pointcloud/autoware_utils_debug_v49/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/universe/autoware.universe/sensing/cuda_pointcloud/autoware_utils_diagnostics_v49/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/universe/autoware.universe/sensing/cuda_pointcloud/autoware_utils_geometry_v49/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/universe/autoware.universe/sensing/cuda_pointcloud/autoware_utils_logging_v49/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/universe/autoware.universe/sensing/cuda_pointcloud/autoware_utils_tf_v49/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/universe/autoware.universe/sensing/cuda_pointcloud/autoware_utils_v49/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/universe/autoware.universe/sensing/cuda_pointcloud/autoware_utils_visualization_v49/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/universe/autoware.universe/sensing/cuda_pointcloud/cuda_blackboard_v49/: CHANGELOG.rst  CMakeLists.txt  README.md  build_depends.repos  package.xml
src/universe/autoware.universe/sensing/cuda_pointcloud/managed_transform_buffer_v49/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/universe/autoware.universe/sensing/cuda_pointcloud/negotiated_v49/: CMakeLists.txt  package.xml
src/universe/autoware.universe/sensing/cuda_pointcloud/tier4_debug_msgs_v49/: CMakeLists.txt  package.xml
(+429 files in other folders)
