<?xml version="1.0"?>
<package format="3">
  <name>my_gnss_converter</name>
  <version>0.0.1</version>
  <description>GNSS Converter Node to republish LocationIMU as standard ROS2 GNSS messages.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- runtime/build dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ublox_msgs</depend>
  <depend>dfcv_mining_msgs</depend>
  <depend>tf2</depend>
<depend>tf2_ros</depend>

  <!-- test (可选) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

