<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>autoware_cmake_v49</name>
  <version>1.1.0</version>
  <description>CMake scripts for Autoware</description>
  <maintainer email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</maintainer>
  <maintainer email="esteve.fernandez@tier4.jp">Esteve Fernandez</maintainer>
  <maintainer email="yutaka.kondo@tier4.jp">Yutaka Kondo</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <buildtool_export_depend>ament_cmake_auto</buildtool_export_depend>
  <buildtool_export_depend>ament_lint_auto</buildtool_export_depend>
  <build_export_depend>ros_environment</build_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common_v49</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>