<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>autoware_cuda_pointcloud_preprocessor_v49</name>
  <version>0.48.0</version>
  <description>autoware_cuda_pointcloud_preprocessor_v49</description>
  <maintainer email="kenzo.lobos@tier4.jp">Kenzo Lobos-Tsunekawa</maintainer>
  <maintainer email="amadeusz.szymko.2@tier4.jp">Amadeusz Szymko</maintainer>
  <maintainer email="max.schmeller@tier4.jp">Max Schmeller</maintainer>
  <maintainer email="david.wong@tier4.jp">David Wong</maintainer>
  <maintainer email="manato.hirabayashi@tier4.jp">Manato Hirabayashi</maintainer>
  <maintainer email="yihsiang.fang@tier4.jp">Yihsiang Fang</maintainer>
  <author email="kenzo.lobos@tier4.jp">Kenzo Lobos-Tsunekawa</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake_v49</buildtool_depend>

  <depend>agnocastlib_v49</depend>
  <depend>autoware_agnocast_wrapper_v49</depend>
  <depend>autoware_cuda_dependency_meta_v49</depend>
  <depend>autoware_cuda_utils_v49</depend>
  <depend>autoware_point_types_v49</depend>
  <depend>autoware_pointcloud_preprocessor_v49</depend>
  <depend>autoware_sensing_msgs_v49</depend>
  <depend>autoware_utils_v49</depend>
  <depend>cuda_blackboard_v49</depend>
  <depend>diagnostic_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>tier4_debug_msgs_v49</depend>

  <test_depend>ament_clang_format</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>