<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>autoware_internal_metric_msgs_v49</name>
  <version>1.12.1</version>
  <description>The autoware_internal_metric_msgs package</description>
  <maintainer email="temkei.kem@tier4.jp">Temkei Kem</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>builtin_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>