<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>autoware_lint_common_v49</name>
  <version>1.1.0</version>
  <description>The list of commonly used linters in Autoware</description>
  <maintainer email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</maintainer>
  <maintainer email="esteve.fernandez@tier4.jp">Esteve Fernandez</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_core</buildtool_depend>
  <buildtool_depend>ament_cmake_export_dependencies</buildtool_depend>
  <buildtool_depend>ament_cmake_test</buildtool_depend>

  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>
  <buildtool_export_depend>ament_cmake_test</buildtool_export_depend>

  <exec_depend>ament_cmake_copyright</exec_depend>
  <exec_depend>ament_cmake_cppcheck</exec_depend>
  <exec_depend>ament_cmake_lint_cmake</exec_depend>
  <exec_depend>ament_cmake_xmllint</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>